# SoftHeap

./: CMakeLists.txt  CMakeLists.txt.in  README.md
data/: sequence_approx_sort_deviation.txt  sequence_approx_sort_inversions_0-10.txt  sequence_approx_sort_inversions_0-20.txt  sequence_approx_sort_inversions_0-40.txt  sequence_approx_sort_inversions_0-50.txt  sequence_approx_sort_time_0-10.txt  sequence_approx_sort_time_0-20.txt  sequence_approx_sort_time_0-40.txt  sequence_approx_sort_time_0-50.txt  sequence_kth_element_time_0-10.txt  sequence_kth_element_time_0-20.txt  sequence_kth_element_time_0-40.txt  tree_approx_sort_deviation.txt  tree_approx_sort_inversions_0-10.txt  tree_approx_sort_inversions_0-20.txt  tree_approx_sort_inversions_0-40.txt  tree_approx_sort_inversions_0-50.txt  tree_approx_sort_time_0-10.txt  tree_approx_sort_time_0-20.txt  tree_approx_sort_time_0-40.txt  tree_approx_sort_time_0-50.txt  tree_kth_element_time_0-10.txt  tree_kth_element_time_0-20.txt  tree_kth_element_time_0-40.txt
src/: ApproxSortGenerator.cpp  KthElementGenerator.cpp  approx_sort_generator.cpp  kth_element_generator.cpp
src/KaplanSoftHeap/: TreeNode.cpp  TreeNode.h
src/SoftHeap/: BaseNode.h  Element.cpp  Element.h  HeapStructure.h  SoftHeap.h
src/SoftSequenceHeap/: SequenceNode.cpp  SequenceNode.h
src/utils/: ApproxSortUtils.cpp  ApproxSortUtils.h  KthElementUtils.cpp  KthElementUtils.h  approx_sort_utils.cpp  approx_sort_utils.h  kth_element_utils.cpp  kth_element_utils.h
test/: HeapStructureTest.cpp  SoftHeapTest.cpp
test/KaplanSoftHeapTest/: TreeNodeTest.cpp
test/SoftSequenceHeapTest/: SequenceNodeTest.cpp
